test/parsing/vass/comment-nested-slashstarslash-1.good
comment-nested-slashstarslash-1.chpl:6: error: EOF in comment
comment-nested-slashstarslash-1.chpl:1: note: Unterminated comment started here
comment-nested-slashstarslash-1.chpl:3: note: Nested comment started here
