test/parsing/vass/comment-nested-slashstarslash-1.chpl
/*/ compilerError("should not see this one - 1");
Note: here we are inside a comment.
/*/
*/
compilerError("should not see this one - 2");
